fix race box height so avatars are not cut off

--- a/components/Ballot/Ballot.module.scss
+++ b/components/Ballot/Ballot.module.scss
@@ -32,6 +32,8 @@
 
 .flexBetween {
   @include flex-between(0.5rem);
+  align-items: stretch;
+
 }
 
 .electionHeader {
@@ -80,6 +82,7 @@
     @include for-tablet-up {
       font-size: 1.5em;
       margin-bottom: 1rem;
+      margin-top:0;
     }
     span:first-child {
       font-weight: 400;
@@ -97,6 +100,19 @@
         padding-left: 1rem;
       }
     }
+  }
+}
+
+.raceHeader:first-child {
+  margin-top: 0;
+  @include for-tablet-up {
+    margin-top: 1rem;
+  }
+}
+.raceHeader {
+  margin-top: 1rem;
+  @include for-tablet-up {
+    margin-top: 3rem;
   }
 }
 
