--- a/components/Scroller/Scroller.css
+++ b/components/Scroller/Scroller.css
@@ -6,7 +6,7 @@
 .react-horizontal-scrolling-menu--scroll-container {
   flex-basis: 100%;
   flex-shrink: 0;
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
   scroll-snap-type: x mandatory;
   order: 1;
   scrollbar-width: none; /* Firefox */
